On branch patch-1 Validate content and update links. modified:   src/main/resources/marketing-artifacts/partner-center.html
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/src/main/resources/marketing-artifacts/partner-center.html
+++ b/src/main/resources/marketing-artifacts/partner-center.html
@@ -39,7 +39,7 @@ your Azure migration.</i></p>
 <ul>
 <li><a href="https://learn.microsoft.com/en-us/azure/developer/java/ee/websphere-family">WebSphere on Azure</a></li>
 <li><a href="https://ibm.biz/WebSphereOnAzureContactMe">WebSphere on Azure Marketplace Overview</a></li>
-<li><a href="">WebSphere Single Instance on an Azure VM</a></li>
-<li><a href="">WebSphere Cluster on Azure VMs</a></li>
-<li><a href="">WebSphere Liberty/Open Liberty on AKS</a></li>
+<li><a href="https://aka.ms/twas-single-portal">WebSphere Single Instance on Azure VM</a></li>
+<li><a href="https://aka.ms/twas-cluster-portal">WebSphere Cluster on Azure VMs</a></li>
+<li><a href="https://aka.ms/liberty-aks">WebSphere Liberty/Open Liberty on AKS</a></li>
 </ul>
