Update Image offering links to ARO  partner-center.html

--- a/src/main/resources/marketing-artifacts/partner-center.html
+++ b/src/main/resources/marketing-artifacts/partner-center.html
@@ -39,7 +39,10 @@ your Azure migration.</i></p>
 <ul>
 <li><a href="https://learn.microsoft.com/en-us/azure/developer/java/ee/websphere-family">WebSphere on Azure</a></li>
 <li><a href="https://ibm.biz/WebSphereOnAzureContactMe">WebSphere on Azure Marketplace Overview</a></li>
-<li><a href="https://aka.ms/twas-single-portal">WebSphere Single Instance on Azure VM</a></li>
-<li><a href="https://aka.ms/twas-cluster-portal">WebSphere Cluster on Azure VMs</a></li>
-<li><a href="https://aka.ms/liberty-aks">WebSphere Liberty/Open Liberty on AKS</a></li>
+<li><a href="https://ibm.biz/twas-nd-portal">WebSphere ND Image on Azure VM</a></li>
+<li><a href="https://ibm.biz/twas-base-portal">WebSphere Base Image on Azure VM</a></li>
+<li><a href="https://ibm.biz/twas-ihs-portal">WebSphere IHS Image on Azure VM</a></li>
+<li><a href="https://ibm.biz/twas-single-portal">WebSphere Single Instance on Azure VM</a></li>
+<li><a href="https://ibm.biz/twas-cluster-portal">WebSphere Cluster on Azure VMs</a></li>
+<li><a href="https://ibm.biz/liberty-aks">WebSphere Liberty/Open Liberty on AKS</a></li>
 </ul>
