--- a/src/main/resources/marketing-artifacts/partner-center.html
+++ b/src/main/resources/marketing-artifacts/partner-center.html
@@ -29,7 +29,7 @@ supported through WebSphere Liberty entitlements. When using WebSphere Liberty o
 using the <a href="https://github.com/IBM/ibm-licensing-operator">License Service Operator</a>.</p>
 <p>IBM and Microsoft also provide basic step-by-step instructions on getting started with Liberty and ARO without automated
 provisioning.</p>
-<p>IBM and Microsoft provide similar solutions targeting WebSphere (traditional) on Azure VMs (single instance or cluster),
+<p>IBM and Microsoft provide similar solutions targeting WebSphere (traditional) on Azure VMs (single instance or cluster), on Azure VM Images (ND, Base, or HTTP Server), ,
 and Liberty on the Azure Kubernetes Service (AKS). These options are linked in the <i>Learn more</i> section below.</p>
 <p><i>You can reach out to the engineering team developing these offers by clicking the CONTACT ME button on the
 <a href="https://ibm.biz/WebSphereOnAzureContactMe">marketplace
