On branch edburns-msft-ibm-336-license-headers Your branch is up to date with 'origin/edburns-msft-ibm-336-license-headers'.
Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   .github/workflows/integration-test.yaml
	modified:   .github/workflows/package.yaml
	modified:   .github/workflows/setup-credentials.sh
	modified:   .github/workflows/tear-down-credentials.sh
	modified:   README.md
	modified:   docs/howto-update-offer-in-partner-center.md
	modified:   docs/trouble-shooting-guide.md
	modified:   pom.xml
	modified:   src/main/arm/mainTemplate.json
	modified:   src/main/cli/deploy.azcli
	modified:   src/main/resources/README.md
	modified:   src/main/resources/marketing-artifacts/partner-center.html
	modified:   src/main/scripts/catalog-source.yaml
	modified:   src/main/scripts/install.sh
	modified:   src/main/scripts/open-liberty-application.yaml.template
	modified:   src/main/scripts/open-liberty-operator-subscription.yaml
	modified:   src/main/scripts/preflight.sh
	modified:   src/main/scripts/websphere-liberty-application.yaml.template
	modified:   src/main/scripts/websphere-liberty-operator-subscription.yaml

no changes added to commit (use "git add" and/or "git commit -a")

Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/src/main/resources/marketing-artifacts/partner-center.html
+++ b/src/main/resources/marketing-artifacts/partner-center.html
@@ -1,3 +1,6 @@
+<!-- Copyright (c) Microsoft Corporation. -->
+<!-- Copyright (c) IBM Corporation. -->
+
 <h1>Name</h1>
 <p>IBM WebSphere Liberty and Open Liberty on Azure Red Hat OpenShift</p>
 <h1>Search results summary</h1>
